--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -9,6 +9,16 @@
 
 .chat__messages {
   flex: 1;
+  overflow: scroll;
+}
+
+.chat__messages::-webkit-scrollbar {
+  display: none;
+}
+
+.chat__messages {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .chat__input {
@@ -43,4 +53,8 @@
 
 .chat__inputIcons > .MuiSvgIcon-root {
   padding: 5px;
+}
+
+.icons_hover:hover {
+  color: white;
 }
